--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Teko&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Sarpanch:wght@900&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Six+Caps&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@600&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -15,12 +16,11 @@
     <main>
 
         <section id="sectie1">
-            <p>internationale <br> bürofachasusstellung <br> basel </p>
+<!--            <p>internationale <br> bürofachasusstellung <br> basel </p>-->
+            <p>INTERNATIONALE <br> BÜROFACHASUSSTELLUNG  <br> BASEL  </p>
             <div>
-                <!--      <h1>Büro</h1>
-      <h2>Büro</h2>-->
 
-<svg id="Layer_1" data-name="Layer 2" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 90.5 89.46">
+                <svg id="Layer_1" data-name="Layer 2" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 90.5 89.46">
     <defs>
         <style>.cls-1{fill:#1d1d1b;}</style>
     </defs>
@@ -33,7 +33,7 @@
     <path class="cls-1" d="M88.37,59.72H74.24a5.67,5.67,0,0,0-5.67,5.67v18.4a5.67,5.67,0,0,0,5.67,5.67H88.37A5.67,5.67,0,0,0,94,83.79V65.39A5.67,5.67,0,0,0,88.37,59.72ZM81,77V72.23h.62V77Z" transform="translate(-3.53)" />
 </svg>
 
-<svg id="Layer_2" data-name="Layer 2" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 90.5 42.84">
+                <svg id="Layer_2" data-name="Layer 2" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 90.5 42.84">
     <defs>
         <style>.cls-1{fill:#e52331;}</style>
     </defs>
@@ -54,9 +54,16 @@
         <section id="sectie2">
             <div id="texture"><img src="img/paper.jpg" alt=""></div>
 
-            <!--<h1>NORM</h1>-->
-
-            <svg id="Layer_3" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 93.07 22.57"><defs><style>.cls-1{fill:#e52331;}</style></defs><title>Untitled-3</title><path class="cls-1" d="M31.44,13.45H15.27V36h7.16V21.75H25.8a1.41,1.41,0,0,1,1.41,1.41V36h8.48V17.7A4.25,4.25,0,0,0,31.44,13.45Z" transform="translate(-15.27 -13.45)"/><polygon class="cls-1" points="53.34 0 44.86 0 44.86 22.57 53.34 22.57 53.34 8.3 57.56 8.3 57.56 0 53.34 0"/><path class="cls-1" d="M99.86,13.45H74.46V36h8.48V21.75h2.8a1.41,1.41,0,0,1,1.42,1.41V36h8.48V21.75h2.8a1.41,1.41,0,0,1,1.42,1.41V36h8.48V17.7a4.25,4.25,0,0,0-4.25-4.25Z" transform="translate(-15.27 -13.45)"/><path class="cls-1" d="M54.28,13.45H41.61a4.25,4.25,0,0,0-4.25,4.25V31.77A4.25,4.25,0,0,0,41.61,36H54.28a4.26,4.26,0,0,0,4.26-4.25V17.7A4.25,4.25,0,0,0,54.28,13.45ZM48.64,27.72H47.25a1.43,1.43,0,0,1-1.42-1.42V23.16a1.42,1.42,0,0,1,1.42-1.41h1.39a1.42,1.42,0,0,1,1.42,1.41V26.3A1.43,1.43,0,0,1,48.64,27.72Z" transform="translate(-15.27 -13.45)"/></svg>
+            <svg id="Layer_3" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 93.07 22.57">
+    <defs>
+        <style>.cls-1{fill:#e52331;}</style>
+    </defs>
+    <title>Untitled-3</title>
+    <path class="cls-1" d="M31.44,13.45H15.27V36h7.16V21.75H25.8a1.41,1.41,0,0,1,1.41,1.41V36h8.48V17.7A4.25,4.25,0,0,0,31.44,13.45Z" transform="translate(-15.27 -13.45)" />
+    <polygon class="cls-1" points="53.34 0 44.86 0 44.86 22.57 53.34 22.57 53.34 8.3 57.56 8.3 57.56 0 53.34 0" />
+    <path class="cls-1" d="M99.86,13.45H74.46V36h8.48V21.75h2.8a1.41,1.41,0,0,1,1.42,1.41V36h8.48V21.75h2.8a1.41,1.41,0,0,1,1.42,1.41V36h8.48V17.7a4.25,4.25,0,0,0-4.25-4.25Z" transform="translate(-15.27 -13.45)" />
+    <path class="cls-1" d="M54.28,13.45H41.61a4.25,4.25,0,0,0-4.25,4.25V31.77A4.25,4.25,0,0,0,41.61,36H54.28a4.26,4.26,0,0,0,4.26-4.25V17.7A4.25,4.25,0,0,0,54.28,13.45ZM48.64,27.72H47.25a1.43,1.43,0,0,1-1.42-1.42V23.16a1.42,1.42,0,0,1,1.42-1.41h1.39a1.42,1.42,0,0,1,1.42,1.41V26.3A1.43,1.43,0,0,1,48.64,27.72Z" transform="translate(-15.27 -13.45)" />
+</svg>
 
             <div class="grid-container">
                 <div class="blokje">
