--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <p>INTERNATIONALE <br> BÜROFACHASUSSTELLUNG  <br> BASEL  </p>
             <div>
 
-                <svg id="Layer_1" data-name="Layer 2" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 90.5 89.46">
+                <svg id="buro_1" data-name="Layer 2" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 90.5 89.46">
     <defs>
         <style>.cls-1{fill:#1d1d1b;}</style>
     </defs>
@@ -33,7 +33,7 @@
     <path class="cls-1" d="M88.37,59.72H74.24a5.67,5.67,0,0,0-5.67,5.67v18.4a5.67,5.67,0,0,0,5.67,5.67H88.37A5.67,5.67,0,0,0,94,83.79V65.39A5.67,5.67,0,0,0,88.37,59.72ZM81,77V72.23h.62V77Z" transform="translate(-3.53)" />
 </svg>
 
-                <svg id="Layer_2" data-name="Layer 2" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 90.5 42.84">
+                <svg id="buro_2" data-name="Layer 2" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 90.5 42.84">
     <defs>
         <style>.cls-1{fill:#e52331;}</style>
     </defs>
@@ -54,7 +54,7 @@
         <section id="sectie2">
             <div id="texture"><img src="img/paper.jpg" alt=""></div>
 
-            <svg id="Layer_3" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 93.07 22.57">
+            <svg id="norm" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 93.07 22.57">
     <defs>
         <style>.cls-1{fill:#e52331;}</style>
     </defs>
