--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
 <body>
 
     <main>
-
+        
+        <div id="streep1"></div>
+        <div id="streep2"></div>
         <section id="sectie1">
            <div id="texture1"><img src="img/paper.jpg" alt=""></div>
             <p>INTERNATIONALE <br> BÜROFACHASUSSTELLUNG  <br> BASEL  </p>
@@ -52,6 +54,7 @@
 
         <section id="sectie2">
             <div id="texture2"><img src="img/paper-horizontal.jpg" alt=""></div>
+            <div id="texture3"><img src="img/paper-horizontal.jpg" alt=""></div>
 
             <svg id="norm" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 93.07 22.57">
     <defs>
