--- a/index.html
+++ b/index.html
@@ -56,15 +56,15 @@
             <div id="texture2"><img src="img/paper-horizontal.jpg" alt=""></div>
             <div id="texture3"><img src="img/paper-horizontal.jpg" alt=""></div>
 
-            <svg id="norm" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 93.07 22.57">
+            <svg id="norm" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 94.39 22.57">
     <defs>
         <style>.cls-1{fill:#e52331;}</style>
     </defs>
-    <title>Untitled-3</title>
-    <path class="cls-1" d="M31.44,13.45H15.27V36h7.16V21.75H25.8a1.41,1.41,0,0,1,1.41,1.41V36h8.48V17.7A4.25,4.25,0,0,0,31.44,13.45Z" transform="translate(-15.27 -13.45)" />
-    <polygon class="cls-1" points="53.34 0 44.86 0 44.86 22.57 53.34 22.57 53.34 8.3 57.56 8.3 57.56 0 53.34 0" />
-    <path class="cls-1" d="M99.86,13.45H74.46V36h8.48V21.75h2.8a1.41,1.41,0,0,1,1.42,1.41V36h8.48V21.75h2.8a1.41,1.41,0,0,1,1.42,1.41V36h8.48V17.7a4.25,4.25,0,0,0-4.25-4.25Z" transform="translate(-15.27 -13.45)" />
-    <path class="cls-1" d="M54.28,13.45H41.61a4.25,4.25,0,0,0-4.25,4.25V31.77A4.25,4.25,0,0,0,41.61,36H54.28a4.26,4.26,0,0,0,4.26-4.25V17.7A4.25,4.25,0,0,0,54.28,13.45ZM48.64,27.72H47.25a1.43,1.43,0,0,1-1.42-1.42V23.16a1.42,1.42,0,0,1,1.42-1.41h1.39a1.42,1.42,0,0,1,1.42,1.41V26.3A1.43,1.43,0,0,1,48.64,27.72Z" transform="translate(-15.27 -13.45)" />
+    <title>Untitled-1</title>
+    <path class="cls-1" d="M17.49,0H0V22.57H8.48V8.3h3.37a1.42,1.42,0,0,1,1.42,1.42V22.57h8.47V4.25A4.25,4.25,0,0,0,17.49,0Z" />
+    <polygon class="cls-1" points="54.66 0 46.18 0 46.18 22.57 54.66 22.57 54.66 8.3 58.88 8.3 58.88 0 54.66 0" />
+    <path class="cls-1" d="M85.91,0H60.51V22.57H69V8.3h2.8a1.41,1.41,0,0,1,1.42,1.42V22.57h8.48V8.3H84.5a1.41,1.41,0,0,1,1.41,1.42V22.57h8.48V4.25A4.25,4.25,0,0,0,90.14,0Z" />
+    <path class="cls-1" d="M40.34,0H27.66a4.25,4.25,0,0,0-4.25,4.25V18.32a4.25,4.25,0,0,0,4.25,4.25H40.34a4.25,4.25,0,0,0,4.25-4.25V4.25A4.25,4.25,0,0,0,40.34,0ZM34.69,14.27H33.3a1.41,1.41,0,0,1-1.41-1.42V9.72A1.41,1.41,0,0,1,33.3,8.3h1.39a1.41,1.41,0,0,1,1.42,1.42v3.13A1.41,1.41,0,0,1,34.69,14.27Z" />
 </svg>
 
             <div class="grid-container-1">
